--- a/tomcat-setup.yml
+++ b/tomcat-setup.yml
@@ -4,7 +4,7 @@
   connection: local
   become: yes               # If to escalate privilege
   become_method: sudo       # Set become method
-  remote_user: root         # Update username for remote server
+  remote_user: centos       # Update username for remote server
   vars:
     tomcat_ver: 9.0.30                          # Tomcat version to install
     ui_manager_user: manager                    # User who can access the UI manager section only
